force-app/main/default/objects/GTM_Readout_Version__c/GTM_Readout_Version__c.object-meta.xml
<CustomObject>
    <label>Readout Version</label>
    <nameField>
        <displayFormat>RDV-{0000}</displayFormat>
        <label>Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Readout Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>