force-app/main/default/objects/GTM_Readout_Version__c/fields/Data_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Data_Snapshot__c</fullName>
    <description>The structured half of the snapshot, alongside Snapshot__c which holds the prose half. A version row that carried only the prose could not prove what numbers, bands or provenance chips the approver actually saw, because those are rendered from Approved_Data__c rather than written into the prose.</description>
    <label>Data Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>