force-app/main/default/objects/GTM_Readout_Version__c/fields/Readout__c.field-meta.xml
<CustomField>
    <fullName>Readout__c</fullName>
    <description>The Master record this version is for</description>
    <label>Readout</label>
    <referenceTo>GTM_Readout__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>