force-app/main/default/objects/GTM_Readout_Version__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <description>The frozen content at this version -- Draft_Content__c at Approve, Approved_Content__c at Publish</description>
    <label>Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>