force-app/main/default/objects/GTM_Readout_Version__c/fields/Status_At_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Status_At_Snapshot__c</fullName>
    <description>Whether this snapshot was taken at Approve or Publish</description>
    <label>Status At Snapshot</label>
    <length>40</length>
    <type>Text</type>
</CustomField>